Try fixing x-axis overflow on mobile devices

--- a/src/layouts/index.scss
+++ b/src/layouts/index.scss
@@ -1,6 +1,10 @@
 @import '~normalize.css';
 @import '../utils/theme';
 
+html {
+  overflow-x: hidden;
+}
+
 body {
   box-sizing: border-box;
   font-family: 'Montserrat', sans-serif;
